Replace .trim().isEmpty() with .isBlank() in interview commands